# vitepress-showcase

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/: _mermaid_demo.ts  cheatsheet.md  index.md  package-lock.json  package.json  stats.data.ts  team.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: Layout.vue  custom.css  index.ts
docs/.vitepress/theme/components/: CostEstimator.vue  MermaidDiagram.vue  PipelineDiagram.vue  ShowcaseBanner.vue  StatsStrip.vue
docs/changelog/: 2026-01-15-unity-catalog.md  2026-02-03-reco-v7.md  2026-03-20-feature-store.md  2026-04-22-vector-search.md  entries.data.ts  index.md
docs/tables/: [table].md  [table].paths.ts  _catalog.ts  index.md
src/vitepress_showcase/: __init__.py  pipelines.py
tests/: test_smoke.py
