[project]
name = "vitepress-showcase"
version = "0.1.0"
description = "A Python project whose documentation is built with VitePress."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vitepress_showcase"]

[tool.pytest.ini_options]
testpaths = ["tests"]
